; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/android/extr_logger.c_do_write_log.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/android/extr_logger.c_do_write_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.logger_log = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.logger_log*, i8*, i64)* @do_write_log to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_write_log(%struct.logger_log* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.logger_log*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.logger_log* %0, %struct.logger_log** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %10 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %13 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = sub nsw i64 %11, %14
  %16 = call i64 @min(i64 %8, i64 %15)
  store i64 %16, i64* %7, align 8
  %17 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %18 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %21 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %19, %22
  %24 = load i8*, i8** %5, align 8
  %25 = load i64, i64* %7, align 8
  %26 = call i32 @memcpy(i64 %23, i8* %24, i64 %25)
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %41

30:                                               ; preds = %3
  %31 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %32 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load i8*, i8** %5, align 8
  %35 = load i64, i64* %7, align 8
  %36 = getelementptr i8, i8* %34, i64 %35
  %37 = load i64, i64* %6, align 8
  %38 = load i64, i64* %7, align 8
  %39 = sub i64 %37, %38
  %40 = call i32 @memcpy(i64 %33, i8* %36, i64 %39)
  br label %41

41:                                               ; preds = %30, %3
  %42 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %43 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* %6, align 8
  %46 = add i64 %44, %45
  %47 = call i64 @logger_offset(i64 %46)
  %48 = load %struct.logger_log*, %struct.logger_log** %4, align 8
  %49 = getelementptr inbounds %struct.logger_log, %struct.logger_log* %48, i32 0, i32 0
  store i64 %47, i64* %49, align 8
  ret void
}

declare dso_local i64 @min(i64, i64) #1

declare dso_local i32 @memcpy(i64, i8*, i64) #1

declare dso_local i64 @logger_offset(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
